...
                android:src="@drawable/arrow_left" />

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Next Question"
                android:src="@drawable/arrow_right" />
        </LinearLayout>


    </LinearLayout>
<!--</android.support.v4.widget.SwipeRefreshLayout>-->
